Everzthing is fine, but response from backend is not shown on front

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,7 +28,7 @@
 }
 
 .photo img {
-  width: 100%; /* Adjust image width as needed */
-  height: auto; /* Maintain aspect ratio */
+  width: 100%; 
+  height: auto; 
   margin-bottom: 10px;
 }
