--- a/client/src/pages/CreateProduct.css
+++ b/client/src/pages/CreateProduct.css
@@ -36,3 +36,51 @@
   span {
     color: red;
   }
+
+  .formContainer {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+  }
+  
+  .formContainer label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  .formContainer input[type="text"],
+  .formContainer input[type="file"],
+  .formContainer button {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+  }
+  
+  .formContainer input[type="file"] {
+    display: none;
+  }
+  
+  #photoInputLabel {
+    cursor: pointer;
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 15px;
+    border-radius: 5px;
+    display: inline-block;
+  }
+  
+  #photoInputLabel:hover {
+    background-color: #0056b3;
+  }
+  
+  .selectedFileName {
+    display: block;
+    margin-top: 10px;
+  }
+  
